Changelog
=========


2.6dev (unreleased)
---------------------

- Add Brazilian translation.
  [davilima6]

- Add Dutch translation.
  [WouterVH]

- Fix i18n-domain for GS-profiles files.
  [WouterVH]

- Avoid duplicate listing in portal_quickinstaller.
  Fixes http://plone.org/products/easynewsletter/issues/6
  [WouterVH]

- Don't overwrite the metaTypesNotToList-property, but just append our own types.
  [WouterVH]


2.5.10a2 (2011-03-11)
---------------------

- Nothing yet.


2.5.10a2 (11/03/2011)
---------------------

- Fix confirm_subscriber and addSubscriber to set salutation from subscribe portlet.
  [numahell]

- Fix ENLHTMLParser for unicode URLs.
  [timo]

- Order newsletters and drafts by creation date.
  [timo]

- Set batch_base_url in enl_subscribers_view, this fix the url of batch navigation.
  [derstappenit]


2.5.10a1 (15/02/2011)
---------------------

- plone.app.testing test setup added.
  [timo]

- Do not exclude ENL content types from navigation on a content object level.
  Exclude them on content type level in the GS profile.
  [timo]

- Fix UnboundLocalError which comes with the try except statement.
  [derstappenit]

- Fix AttributeError get_all_memberproperties if fmp is available but not installed
  in the quickinstaller.
  [derstappenit]


2.5.9 (15/02/2011)
------------------

- Fix UnboundLocalError: local variable 'o' referenced before assignment, which
  come with the try except to cache image handling errors.
  [derstappenit]


2.5.8 (14/02/2011)
------------------

- Fix optional use of fmp.
  [derstappenit]

- Only add default_template if doesnt exists, this fix error in archetypes_tool
  on update schema.
  [derstappenit]

- Add a BooleanField sendToAllPloneMembers, which can be used to address all
  existing plone members in a newsletter, no need to select all every time new
  user are available.
  [derstappenit]

- Fix url handlink for links and images if url contains empty spaces,